UrlFilter::FullUrlRegExp matches more valid urls

Add unittest.

This is based on:
https://datatracker.ietf.org/doc/html/rfc3986

BUG: 452978
FIXED-IN: 22.08